[package]
name = "fiddle_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loader = { path = "../loader"}
tokio = {version = "1", features = ["rt", "net", "macros", "rt-multi-thread"] }
futures = "0.3.21"